fixed table spacing and completed table

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,7 +6,7 @@
     padding-bottom: 20px;
     width: 90%;
     margin: 0 auto;
-    text-align: left;
+    text-align: center;
 }
 
 p {
